@@ -16,10 +16,16 @@
 # get overridden by architecture-specific builds)
 CC = gcc -D_FILE_OFFSET_BITS=64
 WARN_FLAGS = -Wall -W
-OPT_FLAGS = -O3 -fomit-frame-pointer -march=athlon-xp -DNDEBUG
 OPT_FLAGS = -O3 -fomit-frame-pointer -march=k8 -DNDEBUG -D_LARGEFILE64_SOURCE
 
+# use := instead of = so we only run the following once
+SVN_VERSION := $(shell svnversion)
+ifeq ($(SVN_VERSION),)
+	SVN_VERSION := unknown
+endif
+
 CFLAGS = $(OPT_FLAGS) $(MACHINE_FLAGS) $(WARN_FLAGS) \
+	 	-DMSIEVE_SVN_VERSION="\"$(SVN_VERSION)\"" \
 		-I. -Iinclude -Ignfs -Ignfs/poly -Ignfs/poly/stage1
 
 # tweak the compile flags
@@ -36,13 +42,20 @@ ifeq ($(LARGEBLOCKS),1)
 endif
 ifeq ($(CUDA),1)
 	# these environment variables are set in windows
-	# but not in linux; attempt to sample them anyway
 	CUDA_ROOT = $(shell echo $$CUDA_PATH)
 	CUDA_INC_DIR = $(CUDA_ROOT)include
 	CUDA_LIB_DIR = $(CUDA_ROOT)lib/win32
+
+	# On linux, the include directory seems to be in a
+	# standard place but there is a 32-bit and 64-bit
+	# version of the CUDA driver libs
+	# CUDA_INC_DIR = /usr/local/cuda/include
+	# CUDA_LIB_DIR = /usr/lib
+	# CUDA_LIB_DIR = /usr/lib64
+
 	CFLAGS += -I"$(CUDA_INC_DIR)" -DHAVE_CUDA
 
-	# Also, the CUDA driver library has a different name in linux
+	# the CUDA driver library has a different name in linux
 	LIBS += "$(CUDA_LIB_DIR)/cuda.lib"
 	# LIBS += -lcuda
 endif
